--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,21 @@
         </archive>
       </configuration>
     </plugin>
+   <plugin>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>2.0.2</version>
+    <configuration>
+      <source>1.8</source>
+      <target>1.8</target>
+    </configuration>
+   </plugin>
+   <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>exec-maven-plugin</artifactId>
+    <configuration>
+      <mainClass>com.iaditya.mars.Marstime</mainClass>
+    </configuration>
+   </plugin>
   </plugins>
 </build>
 </project>
