--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@ version: 2
 jobs:
   build:
     docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
-      - image: circleci/ruby:2.4.1
+      - image: circleci/java
     steps:
       - checkout
-      - run: echo "A first hello"
+      - apt-get install -y maven
+      - run: mvn clean package test
+ 
